# n-body-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup_env.sh  setup_py.sh
benchmark/: CMakeLists.txt
benchmark/octree/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/barnes_hut/: CMakeLists.txt  barnes_hut.cpp  barnes_hut.h  data_store.cpp  data_store.h  main.cpp  particle.h
modules/octree/: CMakeLists.txt  node_lock.cpp  node_lock.h  octree.cpp  octree.h  particle.h  point3d.h
modules/octree/tests/: CMakeLists.txt  test_octree.cpp
modules/particle_config/: CMakeLists.txt  particle_config.hpp
modules/particle_config/tests/: CMakeLists.txt  test_particle_config.cpp
modules/particle_config/tests/inputs/: test_particle_config0.txt  test_particle_config1.txt
modules/particle_config_parser/: particle_config.hpp
modules/particle_config_parser/tests/: CMakeLists.txt
modules/perf_profiler/: CMakeLists.txt  perf_profiler.cpp  perf_profiler.h
octree/: CMakeLists.txt  leaf_base.h  octree.cpp  octree.h
octree/tests/: CMakeLists.txt  test_octree.cpp
particle_config_parser/: particle_config_parser.hpp
particle_config_parser/tests/: test_particle_config_parser.cpp
playground/octree/: CMakeLists.txt  main.cpp
slurm/: batch_all.sh  batch_perf.sh  benchmark_octree.sh  benchmark_perf_p1.sh  benchmark_perf_p18.sh  benchmark_perf_p36.sh  benchmark_perf_p9.sh  benchmark_scaling_p1.sh  benchmark_scaling_p18.sh  benchmark_scaling_p36.sh  benchmark_scaling_p9.sh
timing_results/: five_hundred_thousand_p1.perf.txt  five_hundred_thousand_p1.txt  five_hundred_thousand_p18.txt  five_hundred_thousand_p36.perf.txt  five_hundred_thousand_p36.txt  five_hundred_thousand_p9.txt  hundred_thousand_p1.txt  hundred_thousand_p18.perf.txt  hundred_thousand_p18.txt  hundred_thousand_p36.txt  hundred_thousand_p9.perf.txt  hundred_thousand_p9.txt  million_p1.perf.txt  million_p1.txt  million_p18.perf.txt  million_p18.txt  million_p36.txt  million_p9.perf.txt  million_p9.txt  results_p18.txt  results_p36.txt  results_p4.txt  results_p9.txt  ten_thousand_p1.txt  ten_thousand_p18.txt  ten_thousand_p36.perf.txt  ten_thousand_p36.txt  ten_thousand_p9.txt
timing_results/impl/: five_hundred_thousand_p36.txt  hundred_thousand_p1.txt  hundred_thousand_p18.txt  hundred_thousand_p9.txt  million_p1.txt  million_p9.txt  ten_thousand_p18.txt  ten_thousand_p36.txt  ten_thousand_p9.txt
timing_results/non_morton/: five_hundred_thousand_p1.txt  five_hundred_thousand_p18.txt  five_hundred_thousand_p36.txt  five_hundred_thousand_p9.txt  hundred_thousand_p1.txt  hundred_thousand_p18.txt  hundred_thousand_p36.txt  hundred_thousand_p9.txt  million_p18.txt  million_p36.txt  million_p9.txt  ten_thousand_p1.txt  ten_thousand_p18.txt  ten_thousand_p36.txt  ten_thousand_p9.txt
timing_results/octree/: results_p2.txt
timing_results/perf/: five_hundred_thousand_p18.perf.txt  five_hundred_thousand_p9.perf.txt  hundred_thousand_p1.perf.txt  hundred_thousand_p36.perf.txt  million_p36.perf.txt  ten_thousand_p1.perf.txt  ten_thousand_p18.perf.txt  ten_thousand_p9.perf.txt
tools/: CMakeLists.txt  create_visualization.py  plot_timing_results.py  tabulate_perf_data.py
tools/particle_file_generator/: CMakeLists.txt  main.cpp
